# 2DPlatformer

./: .gitignore  .gitmodules  BuildDebug.sh  CMakeLists.txt  imgui.ini
res/shaders/: ghostTile.frag.glsl  ghostTile.vert.glsl  player.frag.glsl  player.vert.glsl  tile.frag.glsl
res/textures/: Temp2.png.kra  Temp2.png~  Tilemap.kra
res/textures/Tilemaps/: AboveGrass.kra  GrassStone.kra  PlayerAnimations.kra  PlayerTilemap.kra  StoneCenter.kra  Tilemap.kra
saves/: AnimationTest.json  Optimise_Test.json  Optimise_Test_2.json  data.json  default.json  default_backup.json  default_copy.json
src/: AABB.cpp  AABB.hpp  Animation.hpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  EventHandler.cpp  Events.cpp  Events.hpp  GhostTile.cpp  GhostTile.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiUtility.hpp  Main.cpp  MapManager.cpp  MapManager.hpp  Player.cpp  Player.hpp  PlayerAnimations.hpp  SaveManager.cpp  SaveManager.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  TextureMap.cpp  TextureMap.hpp  Tile.cpp  Tile.hpp  TileManager.cpp  TileManager.hpp  TileMapping.hpp  TileTypes.hpp  TimerManager.cpp  TimerManager.hpp  Window.cpp  Window.hpp
src/events/: EventHandler.hpp  Events.cpp
src/resources/: Shader.cpp  Shader.hpp  Texture2D.cpp  TextureMap.cpp
src/tiles/: GhostTile.cpp  Tile.cpp  Tile.hpp  TileManager.cpp  TileManager.hpp  TileTypes.hpp
